<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unit_convert_lib</name>
  <version>1.0.0</version>
  <description>Header library to convert unit. ROS2 applicable</description>
  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">suisei</maintainer>
  <license>Appache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
