<?xml version="1.0"?>
<package format="2">
  <name>unit_convert_lib</name>
  <version>0.2.0</version>
  <description>ROS1 library to convert values.</description>
  <maintainer email="suisei_wada@naoe.eng.osaka-u.ac.jp">Wada Suisei</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>
